--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,11 +20,11 @@ steps:
     npm install
     npm run build
   displayName: 'Build React App'
-  workingDirectory: 'frontend/edusyncfrontend' # Path to your React app
+  workingDirectory: '$(System.DefaultWorkingDirectory)' # Path to your React app
 
 - task: AzureStaticWebApp@0
   inputs:
-    app_location: 'frontend/edusyncfrontend' # Path to your React app
+    app_location: '/' # Path to your React app
     output_location: 'build'                  # Build output folder
     azure_static_web_apps_api_token: $(deployment_token)
   displayName: 'Deploy to Azure Static Web Apps'
