--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,7 @@ pool:
   vmImage: 'ubuntu-latest'
 
 variables:
-  staticWebAppName: 'edusyncfronend' # Your actual Static Web App name
+  staticWebAppName: 'newfrontend' # Your actual Static Web App name
 
 steps:
 - task: NodeTool@0
