--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "edusyncfrontend",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://localhost:7121",
+  "proxy": "https://backendedusyc-dyddh6e6f9hra8e9.centralindia-01.azurewebsites.net",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
